# summer-taskmgr

./: Doxyfile  Makefile  Makefile.am  README.md  TODO  configure.ac  menus.json
src/: Makefile.am  cpu_info.c  cpu_info.h  main.c  main.h  mem_info.c  mem_info.h  meson.build  process_info.c  process_info.h  process_sorting.c  sighandlers.c  update_threads.c  update_threads.h  utilities.c  windows.c  windows.h
