bin_PROGRAMS = summer-taskmgr
summer_taskmgr_SOURCES = \
	main.c sighandlers.c utilities.c main.h \
	mem_info.c mem_info.h \
	cpu_info.c cpu_info.h \
	process_info.c process_sorting.c process_info.h \
	update_threads.c update_threads.h \
	windows.c windows.h
summer_taskmgr_CFLAGS = $(DEPS_CFLAGS)
summer_taskmgr_LDADD = $(DEPS_LIBS)
